--- a/starter-analysis-exercise/products/report/starter-analysis-report.qmd
+++ b/starter-analysis-exercise/products/report/starter-analysis-report.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Manuscript/Report Template for a Data Analysis Project"
 subtitle: ""
-author: Your Name
+author: Annalise Cramer
 date: today
 format:
   html:
@@ -24,7 +24,34 @@ library(here)
 library(knitr)
 ```
 
+Doreen Kalembe contributed to this exercise.
 
+```{r}
+#| label: fig-result
+#| fig-cap: "Height and weight stratified by gender."
+#| echo: FALSE
+knitr::include_graphics(here("starter-analysis-exercise","results","figures","height-weight-stratified.png"))
+```
+
+```{r}
+#| label: fig2-result
+#| fig-cap: "Age vs Weight plot."
+#| echo: FALSE
+knitr::include_graphics(here("starter-analysis-exercise","results","figures","agevsweight.png"))
+```
+
+
+
+
+
+
+```{r}
+#| label: tbl3-summarytable
+#| tbl-cap: "Data summary table."
+#| echo: FALSE
+resulttable=readRDS("../../results/tables-files/resulttable3.rds")
+knitr::kable(resulttable)
+```
 
 # Summary/Abstract
 _Write a summary of your project._
@@ -79,7 +106,7 @@ _Explain anything related to your statistical analyses._
 _Use a combination of text/tables/figures to explore and describe your data. Show the most important descriptive results here. Additional ones should go in the supplement. Even more can be in the R and Quarto files that are part of your project._
 
 
-@tbl-summarytable shows a summary of the data.
+tbl-summarytable shows a summary of the data.
 
 Note the loading of the data providing a **relative** path using the `../../` notation. (Two dots means a folder up). You never want to specify an **absolute** path like `C:\ahandel\myproject\results\` because if you share this with someone, it won't work for them since they don't have that path. You can also use the `here` R package to create paths. See examples of that below. **I recommend the `here` package, but I'm showing the other approach here just in case you encounter it.**
 
@@ -98,21 +125,21 @@ knitr::kable(resulttable)
 _To get some further insight into your data, if reasonable you could compute simple statistics (e.g. simple models with 1 predictor) to look for associations between your outcome(s) and each individual predictor variable. Though note that unless you pre-specified the outcome and main exposure, any "p<0.05 means statistical significance" interpretation is not valid._
 
 
-@fig-result shows a scatterplot figure produced by one of the R scripts.
+#fig result shows a scatterplot figure produced by one of the R scripts.
 
-```{r}
+#```{r}
 #| label: fig-result
 #| fig-cap: "Height and weight stratified by gender."
 #| echo: FALSE
-knitr::include_graphics(here("starter-analysis-exercise","results","figures","height-weight-stratified.png"))
-```
+#knitr::include_graphics(here("starter-analysis-exercise","results","figures","height-weight-stratified.png"))
+#```
 
 
 ## Full analysis
 
 _Use one or several suitable statistical/machine learning methods to analyze your data and to produce meaningful figures, tables, etc. This might again be code that is best placed in one or several separate R scripts that need to be well documented. You want the code to produce figures and data ready for display as tables, and save those. Then you load them here._
 
-Example @tbl-resulttable2 shows a summary of a linear model fit.
+Example table results shows a summary of a linear model fit.
 
 ```{r}
 #| label: tbl-resulttable2
